# flake-templates

./: README.md  flake.nix
.github/: update-flake-lock.sh
.github/workflows/: update-flake-lock.yml
elixir/: .gitignore  flake.nix
elixir-phoenix/: .gitignore  flake.nix
elixir-phx/: flake.nix
elixir-phx-psql/: flake.nix
elixir-psql/: .gitignore  flake.nix
go-shell/: flake.nix
go-web-server/: flake.nix
python-jupyter-dl/: flake.nix  kernels.nix  pyproject.toml
python-poetry/: flake.nix  pyproject.toml
python-poetry-template/: README.md  pyproject.toml
rust-app/: README.md  flake.nix
rust-app-minimal/: Cargo.toml  flake.nix
rust-app-minimal/nix/: overlay.nix  shell.nix
rust-app/nix/: app.nix  shell.nix
rust-shell/: flake.nix
zig-shell/: .gitignore  flake.nix
