[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["Aos Dabbagh <25783780+aos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
torch = "^2.1.1"
jupyterlab = "^4.0.9"
jupyterlab-vim = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
