[tool.poetry]
name = "app"
version = "0.1.0"
description = "placeholder description"
authors = ["aos"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
pylint = "^2.15.2"
mypy = "=0.961"

[tool.poetry.scripts]
app = 'app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
